fix spacing after "Proof."

--- a/staged_dist/css/theorem.css
+++ b/staged_dist/css/theorem.css
@@ -96,6 +96,7 @@
 .proof:before {
     content: "Proof.";
     font-style: italic;
+    margin-right: 1ch;
 }
 .proof:after {
     content: "\25FC";
